[NANOHUB][#265610][COM_COURSES] get rid of opacity and z-index on unpublished asset groups as it's causing element ordering issues

--- a/plugins/courses/outline/build.css
+++ b/plugins/courses/outline/build.css
@@ -761,9 +761,6 @@ ul {
 	margin-top: -10px;
 }
 .asset-group .unpublished {
-	opacity: 0.8;
-	z-index: 5;
-
 	background-image: url("/media/system/images/light-stripes.png");
 	background-image: -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, rgba(0,0,0, .065)), color-stop(.25, transparent), color-stop(.5, transparent), color-stop(.5, rgba(0,0,0, .065)), color-stop(.75, rgba(0,0,0, .065)), color-stop(.75, transparent), to(transparent));
 	background-image: -webkit-linear-gradient(-45deg, rgba(0,0,0, .065) 25%, transparent 25%, transparent 50%, rgba(0,0,0, .065) 50%, rgba(0,0,0, .065) 75%, transparent 75%, transparent);
